<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="20dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="0dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="0dp">
            <TextView
                android:id="@+id/textServerHost"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/server_host" />

            <EditText
                android:id="@+id/editServerHost"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="0dp">
            <TextView
                android:id="@+id/textServerPort"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/server_port" />
            <EditText
                android:id="@+id/editServerPort"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="0dp">
            <TextView
                android:id="@+id/textUserName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />
            <EditText
                android:id="@+id/editUserName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="0dp">
            <TextView
                android:id="@+id/textPassword"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/password" />
            <EditText
                android:id="@+id/editPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="0dp">
            <TextView
                android:id="@+id/textFirstName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />
            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="0dp">
            <TextView
                android:id="@+id/textLastName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />
            <EditText
                android:id="@+id/editLastName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="0dp">
            <TextView
                android:id="@+id/textEmail"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email" />
            <EditText
                android:id="@+id/editEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="0dp">
            <TextView
                android:id="@+id/radioGender"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/editRadioGender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/female" />
            </RadioGroup>
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="0dp">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="50dp"
                android:text="@string/sign_in" />
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/register" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>